--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,16 +2,19 @@
 
 galaxy_info:
   author: 'Alexandre Chaussier'
-  description: 'Install pip using OS packages'
+  description: 'Ansible role to install pip'
   company: 'Temelio (http://www.temelio.com)'
   license: 'MIT'
   min_ansible_version: '2.0'
   github_branch: 'master'
   platforms:
+    - name: 'Debian'
+      versions:
+        - 'jessie'
     - name: 'Ubuntu'
       versions:
         - 'trusty'
         - 'xenial'
   galaxy_tags:
-    - 'system'
+    - 'python'
 dependencies: []
