--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,9 +3,9 @@
 # Defaults vars file for pip role
 
 # General variables
-pip_os_packages: "{{ _pip_os_packages }}"
+pip_packages: "{{ _pip_packages | default([]) }}"
 
 
 # Specific Debian family vars
-pip_apt_update_cache: True
-pip_apt_cache_valid_time: 3600
+pip_repository_update_cache: True
+pip_repository_cache_valid_time: 3600
