--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   description: 'Ansible role to install pip'
   company: 'Temelio (http://www.temelio.com)'
   license: 'MIT'
-  min_ansible_version: '2.0'
+  min_ansible_version: '2.2'
   github_branch: 'master'
   platforms:
     - name: 'Debian'
@@ -16,5 +16,6 @@ galaxy_info:
         - 'trusty'
         - 'xenial'
   galaxy_tags:
+    - 'development'
     - 'python'
 dependencies: []
